--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ html:after {
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/soumalya-ghosh-0a0bb8274/"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://discord.gg/VqA92g8"><i class="fab fa-discord" aria-hidden="true"></i></a></li>
                       <li class="list-inline-item"><a href="https://guilded.gg/u/duckdev"><i class="fab fa-guilded" aria-hidden="true"></i></a></li>
+			    <li class="list-inline-item"><a href="https://bsky.app/profile/duck.is-a.dev"><i class="fa-brands fa-bluesky" aria-hidden="true"></i></a></li>
                     </ul>
 
                     <!-- buttons -->
